--- a/src/app/demo/components/quiz/quiz-details/quiz-details.component.html
+++ b/src/app/demo/components/quiz/quiz-details/quiz-details.component.html
@@ -11,6 +11,7 @@
     <div *ngIf="!quiz.isPublished" class="badge badge-warning">Not Published</div>
   
     <div class="questions">
+        <br>
       <div *ngFor="let question of quiz.questions; let i = index" class="question">
         <h3>Question {{ i + 1 }}: {{ question.questionText }}</h3>
   
@@ -25,9 +26,10 @@
         </div>
       </div>
     </div>
-    <button [routerLink]="['/workshops']" class="back-button">
-        Back to All Workshops
+    <button [routerLink]="['/workshops', workshopId, 'quizzes']" class="back-button">
+        Back to Quiz List
       </button>
+      
       
 
   </div>
