--- a/src/app/demo/components/quizf/quizf-form/quizf-form.component.html
+++ b/src/app/demo/components/quizf/quizf-form/quizf-form.component.html
@@ -1,4 +1,6 @@
 <app-navbar></app-navbar>
+<br>
+<br>
 <div *ngIf="loading" class="loading-overlay">
     <div class="loading-spinner">Loading...</div>
   </div>
@@ -91,8 +93,15 @@
     <button type="submit" [disabled]="loading" class="submit-button">
       {{ isEditMode ? 'Update' : 'Create' }} Quiz
     </button>
+
+          <!-- Button to navigate back to Quiz List -->
+  <button type="button" (click)="navigateBackToQuizList()" class="back-button">
+    Back to Quiz List
+  </button>
+  
   </form>
   
   <div *ngIf="error" class="alert alert-danger">{{ error }}</div>
   
+  <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
   <app-footer></app-footer>
