--- a/src/app/demo/components/quiz/quiz-score-add/quiz-score-add.component.html
+++ b/src/app/demo/components/quiz/quiz-score-add/quiz-score-add.component.html
@@ -21,6 +21,8 @@
       </div>
   
       <button type="submit" pButton label="Submit" class="p-button-success mt-3 submit-button"></button>
+      <button pButton label="Return" class="p-button-failed mt-3 submit-button" (click)="onReturn()"></button>
+
     </form>
   </div>
   
@@ -28,6 +30,5 @@
   <div *ngIf="!quiz" class="loading-state">
     Loading quiz...
   </div>
-  <app-footer></app-footer>
   
   
