--- a/src/app/demo/components/quizf/quizf-details/quizf-details.component.html
+++ b/src/app/demo/components/quizf/quizf-details/quizf-details.component.html
@@ -12,6 +12,7 @@
     <div *ngIf="!quiz.isPublished" class="badge badge-warning">Not Published</div>
   
     <div class="questions">
+        <br>
       <div *ngFor="let question of quiz.questions; let i = index" class="question">
         <h3>Question {{ i + 1 }}: {{ question.questionText }}</h3>
   
@@ -26,10 +27,12 @@
         </div>
       </div>
     </div>
-    <button [routerLink]="['/workshopsf']" class="back-button">
-        Back to All Workshops
+    <button [routerLink]="['/workshopsf', workshopId, 'quizzes']" class="back-button">
+        Back to Quiz List
       </button>
+      
       
 
   </div>
+  
   <app-footer></app-footer>
