--- a/src/app/demo/components/quizf/quizf-form/quizf-form.component.scss
+++ b/src/app/demo/components/quizf/quizf-form/quizf-form.component.scss
@@ -136,4 +136,20 @@
       margin-top: 20px;
     }
   }
-  
+  .back-button {
+    margin-top: 15px;
+    background-color: #6c757d;
+    color: white;
+    padding: 12px 20px;
+    cursor: pointer;
+    border: none;
+    border-radius: 8px;
+    width: 100%;
+    text-align: center;
+    font-size: 1rem;
+    transition: background-color 0.3s ease;
+
+    &:hover {
+      background-color: #5a6268;
+    }
+  }
